--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
     margin: 0;
     padding: 0;
-
 }
 
 body {
+    font-family: 'Courier New', Courier, monospace;
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 25%;
     left: 25%;
+    background-color: #e9c46a;
+
 }
 
 .container {
@@ -22,8 +24,9 @@ body {
     width: 400px;
     height: 600px;
     background-color: #264653;
+    border: 4px solid #333333;
     border-radius: 10px;
-    box-shadow: 10px, 10px;
+    box-shadow: 6px 6px #555555;
 }
 
 .row {
@@ -32,12 +35,17 @@ body {
 }
 
 .key {
-    width: 75px;
-    height: 60px;
+    width: 70px;
+    height: 50px;
     font-size: 18pt;
-    border: 2px solid #F4A261;
-    background-color: #E76F51;
+    border: 2px solid #E76F51;
+    background-color: #F4A261;
     border-radius: 10px;
+    box-shadow: 3px 3px #000000;
+}
+
+.key:hover{
+    background-color: #f1ad74;
 }
 
 .screen {
@@ -47,6 +55,9 @@ body {
     text-align: end;
     font-size: 30pt;
     background-color: #2A9D8F;
+    border: 2px solid #333333;
     border-radius: 10px;
+    box-shadow: 3px 3px #333333;
+    color: #3f3f3f;
 
 }
